feat: collaborative filtering